<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/global_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_public_24"
        android:title="@string/label_global" />

    <item
        android:id="@+id/continental_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/label_continental" />

    <item
        android:id="@+id/local_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_my_location_24"
        android:title="@string/label_local" />

    <item
        android:id="@+id/metrics_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_insert_chart_24"
        android:title="@string/label_metrics" />

    <item
        android:id="@+id/about_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/label_about" />
</menu>