<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_country"
        android:textStyle="bold"
        android:labelFor="@+id/country_name" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_confirmed_cases"
        android:textStyle="bold"
        android:labelFor="@+id/confirmed_cases" />

    <TextView
        android:id="@+id/confirmed_cases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_confirmed_deaths"
        android:textStyle="bold"
        android:labelFor="@+id/deaths" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_confirmed_recoveries"
        android:textStyle="bold"
        android:labelFor="@+id/recoveries" />

    <TextView
        android:id="@+id/recoveries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_report_date"
        android:textStyle="bold"
        android:labelFor="@+id/report_date" />

    <TextView
        android:id="@+id/report_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray" />

</LinearLayout>