<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="invisible">

    <TableLayout
        android:id="@+id/horizontal_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/total_confirmed"
                style="@style/ConfirmedCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_total_confirmed_cases"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:id="@+id/text_confirmed_cases"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        tools:text="9212353" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/new_confirmed"
                style="@style/ConfirmedCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_new_confirmed_cases"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:id="@+id/text_new_confirmed_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="172341"
                        android:textColor="@android:color/white"
                        style="@style/TextAppearance.MaterialComponents.Headline5" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </TableRow>

        <TableRow>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/total_recovered"
                style="@style/RecoveredCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_total_recoveries"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:id="@+id/text_recovered_cases"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        tools:text="9212353" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/new_recovered"
                style="@style/RecoveredCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_new_recoveries"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:id="@+id/text_new_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="172341"
                        android:textColor="@android:color/white"
                        style="@style/TextAppearance.MaterialComponents.Headline5" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </TableRow>

        <TableRow>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/total_deaths"
                style="@style/DeathsCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_total_deaths"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/text_total_deaths"
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="9212353"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/new_deaths"
                style="@style/DeathsCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_new_deaths"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/text_new_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="172341"
                        android:textColor="@android:color/white"
                        style="@style/TextAppearance.MaterialComponents.Headline5" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </TableRow>

    </TableLayout>

</RelativeLayout>